/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package br.edu.utfpr.entidades;

/**
 *
 * @author Andreia
 */
public class Cliente extends Pessoa {

    public Cliente() {
    }

    public Cliente(String nome, long cpf) {
        super(nome, cpf);
    }
    
}
